tests/cases/errors/compile_unterminated_string.lox
// expect compile error: Unterminated string.
"hello
